--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="ripta-dash.html">
-              <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard" style="width:100%">
+              <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard">
               <div class="caption">
                 <h3 class="caption-title">RIPTA Dashboard</h3>
                 <p class="subcaption">Real-time location and data of Providence buses</p>
@@ -42,7 +42,7 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="osmnx-grids.html">
-              <img src="pictures/osmnx_nyc_crop.png" alt="osmnx-grids of New York City by compass bearing" style="width:100%">
+              <img src="pictures/osmnx_nyc_crop.png" alt="osmnx-grids of New York City by compass bearing">
               <div class="caption">
                 <h3 class="caption-title">OSMnx Grid Analysis</h3>
                 <p class="subcaption">Using OSMnx to analyze the grids of New York City</p>
@@ -53,7 +53,7 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="gb-github-pages.html">
-              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io" style="width:100%">
+              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
               <div class="caption">
                 <h3 class="caption-title">This Site</h3>
                 <p class="subcaption">A custom website built from scratch</p>
