--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="jumbotron" style="margin-top:20px">
           <h1>Garrett Bachant</h1>
-          <p id="intro-paragraph">I am a Python programmer passionate about working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning. Other interests include a diverse range of other areas including linguistics/languages, history, geography, music, sociology, philosophy, psychology, education, and mathematics.</p>
+          <p id="intro-paragraph">I am a Python programmer passionate about working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning. Other interests include a diverse range of areas including linguistics/languages, history, geography, music, sociology, philosophy, psychology, education, and mathematics.</p>
         </div>
       </div>
     </div>
