--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -47,21 +47,18 @@
                         <div class="col-lg-4">
                             <h2>Downtown Manhattan and Brooklyn</h2>
                             <p>
-                                Each group of perpendicular bearings is
-                                represented by a different color. The grouping
-                                of grids becomes immediately apparent. What is
-                                most interested are groups of grids that aren't
-                                connected; though they are physically seperated
-                                they still follow the same bearings. For
-                                instance note the two purple bearing groups: one
-                                at the Brooklyn sides of the Brooklyn and
-                                Manhattan bridges and the other to the far east
-                                of Prospect Park in the bottom left corner of
-                                the image.
+                              Each group of perpendicular bearings is
+                              represented by a different color. The grouping
+                              of grids becomes immediately apparent. What is
+                              most interesting are groups of grids that aren't
+                              connected; though they are physically seperated
+                              they still follow the same bearings. For
+                              instance note the two purple bearing groups: one
+                              at the Brooklyn side of the Brooklyn and
+                              Manhattan bridges and the other to the far east
+                              of Prospect Park in the bottom right corner of
+                              the image.
                             </p>
-                          <a class='btn btn-info pull-right'
-                               href="/article/show/sed-vel-lectus/9">
-                                <i class="fa fa-long-arrow-right"> </i></a>
                         </div>
                     </div>
                     <div class="item">
@@ -71,18 +68,15 @@
                         <div class="col-lg-4">
                             <h2>Closeup of downtown Manhattan and Brooklyn</h2>
                             <p>
-                                Note how the purple bearings on the Brooklyn
-                                ends of the Manhattan and Brooklyn bridges merge
-                                with and become part of the grids of the dark
-                                orange bearings just south of the Brooklyn Navy
-                                Yard. One of the main things I was interested in
-                                doing with this project was analyzing the
-                                'borders' of groups of grids and how their edges
-                                met to bond together.
+                              Note how the purple bearings on the Brooklyn
+                              end of the Manhattan and Brooklyn bridges merge
+                              with and become part of the grids of the dark
+                              orange bearings just south of the Brooklyn Navy
+                              Yard. One of the main things I was interested in
+                              doing with this project was analyzing the
+                              'borders' of groups of grids and how their edges
+                              met and bonded together.
                             </p>
-                           <a class='btn btn-info pull-right'
-                               href="/article/show/sed-vel-lectus/9">
-                                <i class="fa fa-long-arrow-right"> </i></a>
                         </div>
                     </div>
                     <div class="item">
@@ -92,16 +86,13 @@
                         <div class="col-lg-4">
                             <h2>Williamsburg, Brooklyn</h2>
                             <p>
-                                A close up of Williamsburg, a neighborhood of
-                                Brooklyn with a particularly interesting street
-                                pattern. Note the rainbow pattern on the curved
-                                sections of the Williamsburg Bridge and
-                                Interstate 278 as it changes as its segments
-                                change bearings.
+                              A close up of Williamsburg, a neighborhood of
+                              Brooklyn with a particularly interesting street
+                              pattern. Note the rainbow pattern on the curved
+                              sections of the Williamsburg Bridge and
+                              Interstate 278 as it changes as its segments
+                              change bearings.
                             </p>
-                            <a class='btn btn-info pull-right'
-                               href="/article/show/sed-vel-lectus/9">
-                                <i class="fa fa-long-arrow-right"> </i></a>
                         </div>
                     </div>
                 </div>
@@ -116,11 +107,45 @@
             </div>
         </div>
 
-      <p>This is project I have been interested in for quite some time now. It was inspired by looking at the beautiful and chaotic mixing together of grids in New York City, <a href="https://www.google.com/maps/place/Brooklyn,+NY/@40.6496725,-73.9659865,12.5z/data=!4m5!3m4!1s0x89c24416947c2109:0x82765c7404007886!8m2!3d40.6781784!4d-73.9441579">Brookyn</a> in particular. I became interested in finding a way to organize and analyze the relationships of the various grids based on angles of their bearings. It wasn't until I found <a href="https://github.com/gboeing/osmnx">OSMnx</a>, a python package for working with and analyzing OpenStreetMap files made by <a href="http://geoffboeing.com/">Geoff Boeing</a>, that I was able to find the right tool to do so.</p>
-      <p>OSMnx comes with many useful functions for analyzing maps by default such as the ability graph the average bearing of a set of streets or 'edges' as they are called. OSMnx already comes with abilty to retrieve the bearings of a network's streets and <a href="https://github.com/gboeing/osmnx-examples/blob/master/notebooks/15-calculate-visualize-edge-bearings.ipynb">graph their frequency</a>, but this wasn't enough.</p>
-      <p>Anyone familiar with working with OpensStreetMap files will know that they aren't exactly perfect representations. This is due to the very nature of how they are created. OSM files are composed of nodes and ways. Most of these nodes and ways placed by humans physically overlaying them on satellite imagery and can be prone to human error.  As a result, nodes and ways that should theoretically be perfectly aligned and ordered are not.</p>
-      <p>To overcome this I accessed the <code>bearing</code> attribute inside the networkx multidigraph and created another attribute,<code>rounded_bearing</code>, composed of <code>bearing</code> rounded to an integer. This allows us to filter the graph by edge bearings much easier and even chose to only graph the bearings that we desire.</p>
-      <p>I also added another attribute <code>modulo_bearing</code> which is just the <code>rounded_bearing</code>modulo 90. By using modulo 90 I was able to get all edges placed into 90 groups which would be composed of edges who share either parallel or perpendicular edge bearings. From there I was able use an osmnx function,<code>osmnx.get_edge_colors_by_attr()</code>, to assign a different color to each of the 90 groups of edges and eventually plot them.</p>
+      <p>
+        This is project I have been interested in doing for quite some time now.
+        It was inspired by looking at the beautiful and chaotic mixing together
+        of grids in New York City,
+        <a href="https://www.google.com/maps/place/Brooklyn,+NY/@40.6496725,-73.9659865,12.5z/data=!4m5!3m4!1s0x89c24416947c2109:0x82765c7404007886!8m2!3d40.6781784!4d-73.9441579">Brookyn</a>
+        in particular. I became interested in finding a way to organize and
+        analyze the relationships of the various grids based on angles of their
+        bearings. It wasn't until I found <a href="https://github.com/gboeing/osmnx">OSMnx</a>,
+        a Python package for working with and analyzing OpenStreetMap files made
+        by <a href="http://geoffboeing.com/">Geoff Boeing</a>, that I was able to
+        find the right tool to do so.
+      </p>
+      <p>
+        OSMnx comes with many useful functions for analyzing maps by default.
+        One such function is the ability to retrieve the bearings
+        of a network's streets and <a href="https://github.com/gboeing/osmnx-examples/blob/master/notebooks/15-calculate-visualize-edge-bearings.ipynb">graph their frequency</a>,
+        but this wasn't enough.
+      </p>
+      <p>
+        Anyone familiar with working with OpenStreetMap files will know that they
+        aren't exactly perfect representations. This is due to the very nature of
+        how they are created. OSM files are composed of nodes and ways. Most of
+        these nodes and ways were placed by humans physically overlaying them onto
+        satellite imagery and can be prone to human error. As a result, nodes and ways that
+        should theoretically be perfectly aligned and ordered are not.</p>
+      <p>
+        To overcome this I accessed the <code>bearing</code> attribute inside
+        the networkx multidigraph and created another attribute,<code>rounded_bearing</code>,
+        composed of <code>bearing</code> rounded to an integer. This allows us to
+        filter the graph by edge bearings much easier and even chose to only
+        graph the bearings that we desire.
+      </p>
+      <p>I also added another attribute <code>modulo_bearing</code> which is just
+        the <code>rounded_bearing</code>modulo 90. By using modulo 90 I was able
+        to get all edges placed into 90 groups composed of edges who share either
+        parallel or perpendicular edge bearings. From there I was able use an
+        osmnx function,<code>osmnx.get_edge_colors_by_attr()</code>, to assign a
+        different color to each of the 90 groups of edges and eventually plot them.
+      </p>
       <hr>
       <p><a href="https://github.com/gboeing/osmnx/pull/135/files">View contribution to OSMnx sourcecode on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-examples/blob/add-bearing-analysis-example/notebooks/17-edge-bearing-analysis.ipynb">View Python Jupyter Notebook example on GitHub</a>
