--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Garrett Bachant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="icon" type="image/png" href="pictures/favicon-32x32.png" sizes="32x32" />
@@ -31,7 +31,7 @@
       <h5>February 2018</h5>
 
       <div class='container carousel'>
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div id="carousel-example-generic" class="carousel slide">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -41,12 +41,12 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner text-center" role="listbox">
                     <div class="item active">
-                        <div class="col-lg-8 pull-right">
+                        <div class="col-lg-6 pull-right">
                             <img class="img-responsive" src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing">
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-6" style="padding-top:10%">
                             <h2>Downtown Manhattan and Brooklyn</h2>
-                            <p>
+                            <p class="carousel-subcaption">
                               Each group of perpendicular bearings is
                               represented by a different color. The grouping
                               of grids becomes immediately apparent. What is
@@ -62,12 +62,12 @@
                         </div>
                     </div>
                     <div class="item">
-                        <div class="col-lg-8 pull-right">
+                        <div class="col-lg-6 pull-right">
                             <img class="img-responsive" src="pictures/osmnx_nyc_closeup.png" alt="closeup of osmnx-grids of New York City">
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-6" style="padding-top:10%">
                             <h2>Closeup of downtown Manhattan and Brooklyn</h2>
-                            <p>
+                            <p class="carousel-subcaption">
                               Note how the purple bearings on the Brooklyn
                               end of the Manhattan and Brooklyn bridges merge
                               with and become part of the grids of the dark
@@ -80,12 +80,12 @@
                         </div>
                     </div>
                     <div class="item">
-                        <div class="col-lg-8 pull-right">
+                        <div class="col-lg-6 pull-right">
                             <img class"img-responsive" src="pictures/osmnx_williamsburg.png" alt="osmnx-grids of Williamsburg, Brooklyn">
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-6" style="padding-top:10%">
                             <h2>Williamsburg, Brooklyn</h2>
-                            <p>
+                            <p class="carousel-subcaption">
                               A close up of Williamsburg, a neighborhood of
                               Brooklyn with a particularly interesting street
                               pattern. Note the rainbow pattern on the curved
