Fix css ordering

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Garrett Bachant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="icon" type="image/png" href="pictures/favicon-32x32.png" sizes="32x32" />
@@ -31,7 +31,7 @@
       <h4><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">GitHub</a></h4>
       <h4>Providence, Rhode Island <small>(But willing to relocate)</small></h4>
     </div>
-    <hr>
+    <hr style="border-width:3px">
     <div>
       <h3>Skills</h3>
       <ul>
