--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Garrett Bachant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="icon" type="image/png" href="pictures/favicon-32x32.png" sizes="32x32" />
@@ -30,7 +30,12 @@
       <div class="container">
         <div class="jumbotron" style="margin-top:20px">
           <h1>Garrett Bachant</h1>
-          <p id="intro-paragraph">I am a Python programmer passionate about working with and analyzing data. I am particularly interested in applying those skills to improve transit and urban planning. Other interests include a diverse range of areas including linguistics/languages, history, geography, music, sociology, philosophy, psychology, education, and mathematics.</p>
+          <p id="intro-paragraph">
+            I am a Python programmer passionate about working with and analyzing
+            data. I am particularly interested in applying those skills to improve
+            transit and urban planning. Other interests include a diverse range
+            of areas including linguistics/languages, history, geography, music,
+            sociology, philosophy, psychology, education, and mathematics.</p>
         </div>
       </div>
     </div>
