--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -146,7 +146,9 @@
         osmnx function,<code>osmnx.get_edge_colors_by_attr()</code>, to assign a
         different color to each of the 90 groups of edges and eventually plot them.
       </p>
-      <hr>
+    </div>
+    <hr>
+    <div>
       <p><a href="https://github.com/gboeing/osmnx/pull/135/files">View contribution to OSMnx sourcecode on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-examples/blob/add-bearing-analysis-example/notebooks/17-edge-bearing-analysis.ipynb">View Python Jupyter Notebook example on GitHub</a>
       <p><a href="https://github.com/Gbachant/osmnx-grid" class="footer">View project on GitHub</a>
