--- a/gb-github-pages.html
+++ b/gb-github-pages.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Garrett Bachant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="icon" type="image/png" href="pictures/favicon-32x32.png" sizes="32x32" />
@@ -38,7 +38,9 @@
         of building a website so I decided to dive right in and build it from
         the ground up in pure HTML, CSS and Bootstrap.
       </p>
-      <hr>
+    </div>
+    <hr>
+    <div>
       <p><a href="https://github.com/Gbachant/Gbachant.github.io" class="footer">View project on GitHub</a></p>
     </div>
   </body>
