--- a/ripta-dash.html
+++ b/ripta-dash.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Garrett Bachant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="icon" type="image/png" href="pictures/favicon-32x32.png" sizes="32x32" />
@@ -66,8 +66,10 @@
         route and individual bus stop in order to help identify which have the
         best and worst punctuality and to match that with other data to potentially identify why.
       </p>
-      <hr>
-        <p><a href="https://github.com/Gbachant/RIPTA-dashboard" class="footer">View project on GitHub</a></p>
+    </div>
+    <hr>
+    <div>
+      <p><a href="https://github.com/Gbachant/RIPTA-dashboard" class="footer">View project on GitHub</a></p>
     </div>
   </body>
 </html>
