Fix ripta-dash image size

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <div>
       <h1>Garrett Bachant</h1>
       <h4><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">GitHub</a></h4>
-      <h4>Providence, Rhode Island <small>(But willing to relocate)</small></h4>
+      <h4>Providence, Rhode Island <small>(willing to relocate)</small></h4>
     </div>
     <hr style="border-width:3px">
     <div>
