--- a/ripta-dash.html
+++ b/ripta-dash.html
@@ -29,7 +29,7 @@
     <div>
       <h1>RIPTA Dashboard</h1>
       <h5>January 2018</h5>
-      <img id="ripta-background" src="pictures/ripta-animation.gif" alt="real-time RIPTA display animation">
+      <img id="ripta-background" src="pictures/ripta-animation.gif" alt="real-time RIPTA display animation" class="img-responsive" style="padding-right:50%">
       <p>
         RIPTA-Dashboard is Python dashboard for viewing real-time data from its
         RIPTA's API. The data is first taken in and organized into a pandas
@@ -40,7 +40,7 @@
       <h4>Project Data</h4>
       <p>
         All the data for the project came from <a href="http://realtime.ripta.com:81/">RIPTA's own API.</a>
-        The API provides us with a json file of a whole range of the statuses of
+        The API provides us with a JSON file of a whole range of the statuses of
         its buses and bus stops at the time it was read.
       </p>
       <h4>Future Goals</h4>
