--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
     </nav>
-    <div id="index-background">
+    <div id="index-background" class="img-responsive">
       <div class="container">
         <div class="jumbotron" style="margin-top:20px">
           <h1>Garrett Bachant</h1>
