Adjust carousel height

--- a/osmnx-grids.html
+++ b/osmnx-grids.html
@@ -30,7 +30,7 @@
       <h1>Analyzing Grids with OSMnx</h1>
       <h5>February 2018</h5>
 
-      <div class='container carousel'>
+      <div class='container carousel' style="height:650px">
             <div id="carousel-example-generic" class="carousel slide">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -41,10 +41,10 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner text-center" role="listbox">
                     <div class="item active">
-                        <div class="col-lg-6 pull-right">
-                            <img class="img-responsive" src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing">
+                        <div class="col-lg-6 pull-right carousel-image">
+                            <img class="img-responsive carousel-image" src="pictures/osmnx_nyc.png" alt="osmnx-grids of New York City by compass bearing">
                         </div>
-                        <div class="col-lg-6" style="padding-top:10%">
+                        <div class="col-lg-6" style="position:absolute; padding-top:10%">
                             <h2>Downtown Manhattan and Brooklyn</h2>
                             <p class="carousel-subcaption">
                               Each group of perpendicular bearings is
@@ -62,8 +62,8 @@
                         </div>
                     </div>
                     <div class="item">
-                        <div class="col-lg-6 pull-right">
-                            <img class="img-responsive" src="pictures/osmnx_nyc_closeup.png" alt="closeup of osmnx-grids of New York City">
+                        <div class="col-lg-6 pull-right carousel-image">
+                            <img class="img-responsive carousel-image" src="pictures/osmnx_nyc_closeup.png" alt="closeup of osmnx-grids of New York City">
                         </div>
                         <div class="col-lg-6" style="padding-top:10%">
                             <h2>Closeup of downtown Manhattan and Brooklyn</h2>
@@ -80,8 +80,8 @@
                         </div>
                     </div>
                     <div class="item">
-                        <div class="col-lg-6 pull-right">
-                            <img class"img-responsive" src="pictures/osmnx_williamsburg.png" alt="osmnx-grids of Williamsburg, Brooklyn">
+                        <div class="col-lg-6 pull-right carousel-image">
+                            <img class"img-responsive carousel-image" src="pictures/osmnx_williamsburg.png" alt="osmnx-grids of Williamsburg, Brooklyn">
                         </div>
                         <div class="col-lg-6" style="padding-top:10%">
                             <h2>Williamsburg, Brooklyn</h2>
