--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <p id="intro-paragraph">
             I am a Python programmer passionate about working with and analyzing
             data. I am particularly interested in applying those skills to improve
-            transit and urban planning. Other interests include a diverse range
-            of areas including linguistics/languages, history, geography, music,
-            sociology, philosophy, psychology, education, and mathematics.</p>
+            transit and urban planning. Other interests include linguistics/languages,
+            history, geography, music, sociology, philosophy, psychology, education, and mathematics.
+          </p>
         </div>
       </div>
     </div>
