Update skills in about.html

--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
     <div>
       <h3>Skills</h3>
       <ul>
-        <li>Python</li>
-        <li>Pandas</li>
+        <li>Python(Pandas, Jupyter Notebook)</li>
+        <li>Javascript(Jquery)</li>
         <li>Git/GitHub</li>
         <li>Bash</li>
         <li>HTML/CSS</li>
