--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       <h3>Skills</h3>
       <ul>
         <li>Python(Pandas, Jupyter Notebook)</li>
-        <li>Javascript(jQuery)</li>
+        <li>JavaScript(jQuery)</li>
         <li>Git/GitHub</li>
         <li>Bash</li>
         <li>HTML/CSS</li>
