Update resume info for about.html

--- a/lane-claim.html
+++ b/lane-claim.html
@@ -27,21 +27,21 @@
       </div>
     </nav>
     <div>
-      <h1>Analyzing the Linguistic Habits of Songwriters</h1>
-      <h5>April 2018</h5>
-      <p>This project was inspired by the peculiar songwriting habits of
-        Ray Davies(altough for ease of computing the testing was done on
-        Broadcast, a band with a much smaller discography). Although the
-        majority of pop songs tend to generally follow a rhyme scheme of
-        ABAB CDCD etc., I couldn't help but notice that Ray Davies had a habit
-        of choosing lyrics that almost deliberately didn't rhyme. I began to
-        wonder if there was a way to quantifiy and analyze this phenomena and
-        even find other insights into artist's lyrical habits.
+      <h1>Lane Claim</h1>
+      <h5>January 2019</h5>
+      <p>This site was built from scratch using Bootstrap. It is hosted though GitHub's lovely (and free) <a href="https://pages.github.com/">Pages.</a></p>
+      <p>
+        Needing a portfolio website and still being somewhat new to web
+        development I decided to build my own website. I initially planned on
+        building a GitHub-pages website in markdown with a jekyll theme.
+        I eventually decided that I would much rather have the full experience
+        of building a website so I decided to dive right in and build it from
+        the ground up in pure HTML, CSS and Bootstrap.
       </p>
     </div>
     <hr>
     <div>
-      <p><a href="https://github.com/Gbachant/rhyme-scheme" class="footer">View project on GitHub</a></p>
+      <p><a href="https://github.com/Gbachant/Lane-Claim" class="footer">View project on GitHub</a></p>
     </div>
   </body>
 </html>
