--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,39 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail">
+            <a href="rhyme-scheme.html">
+              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              <div class="caption">
+                <h3 class="caption-title">Lane Claim</h3>
+                <p class="subcaption">A progressive web app for tracking and reporting bikelane obstructions</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="rail-mapper.html">
+              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              <div class="caption">
+                <h3 class="caption-title">Rail Mapper</h3>
+                <p class="subcaption">Using Networkx to map and create railway lines</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="rhyme-scheme.html">
+              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              <div class="caption">
+                <h3 class="caption-title">Lyric Analysis</h3>
+                <p class="subcaption">A Jupyter Notebook for analyzing stylistic habits of songwriters</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
             <a href="ripta-dash.html">
               <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard">
               <div class="caption">
@@ -61,6 +94,7 @@
             </a>
           </div>
         </div>
+
       </div>
     </div>
     <script src="index.js"></script>
