--- a/about.html
+++ b/about.html
@@ -28,19 +28,36 @@
     </nav>
     <div>
       <h1>Garrett Bachant</h1>
-      <h4><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://github.com/Gbachant/Gbachant.github.io">GitHub</a></h4>
-      <h4>Providence, Rhode Island <small>(willing to relocate)</small></h4>
+      <h4><a href="mailto:gbachant@gmail.com">gbachant@gmail.com</a> | 774-400-8759 | <a href="https://www.linkedin.com/in/garrett-bachant-36bb77115/">LinkedIn</a> | <a href="https://github.com/Gbachant">GitHub</a></h4>
+      <h4>Waltham, Massachusetts <small>(willing to relocate)</small></h4>
     </div>
     <hr style="border-width:3px">
     <div>
       <h3>Skills</h3>
       <ul>
-        <li>Python(Pandas, Jupyter Notebook)</li>
-        <li>JavaScript(jQuery)</li>
+        <li>Python</li>
+          <ul>
+            <li>Pandas</li>
+            <li>Jupyter Notebook</li>
+            <li>Matplotlib</li>
+            <li>Plotly</li>
+          </ul>
+        <li>JavaScript</li>
+          <ul>
+            <li>jQuery</li>
+            <li>React</li>
+            <li>Firebase</li>
+          </ul>
         <li>Git/GitHub</li>
         <li>Bash</li>
-        <li>HTML/CSS</li>
-        <li>Bootstrap</li>
+        <li>HTML</li>
+          <ul>
+            <li>Bootstrap</li>
+          </ul>
+        <li>CSS</li>
+          <ul>
+            <li>SCSS/SASS</li>
+          </ul>
         <li>Windows Office(Word, Excel, Powerpoint)</li>
         <li>SketchUp CAD Software</li>
         <li>French(intermediate)</li>
@@ -50,6 +67,13 @@
       <h3>Projects</h3>
         <p>See <a href="projects.html">Projects page</a></p>
       <h3>Experience</h3>
+        <h4><a href="https://www.dentsplysirona.com/en-us">Dentsply Sirona</a>, Waltham, MA</h4>
+          <h5>Production Technician: (October 2018—Current)</h5>
+            <ul>
+              <li>Organize customers' orders and confirm their invoices</li>
+              <li>Ship customers' orders at a fast pace</li>
+              <li>Use 5S, Lean, and Kaizen to increase effeciency and improve work methods</li>
+            </ul>
         <h4><a href="https://www.facebook.com/Animal-Associates-1455735024727937/">Animal Associates</a>, Dartmouth, MA</h4>
           <h5>Office Manager/Head Receptionist: (July 2015—November 2016)</h5>
             <ul>
@@ -83,9 +107,9 @@
     </div>
     <hr>
     <div>
-      <a href="https://docs.google.com/document/d/1pOaMSXkLnT-JD91GyqNWhtp43aePwFCRYsTrZAiVEMs/edit?usp=sharing">View Resume on Google Docs</a>
+      <a href="https://docs.google.com/document/d/e/2PACX-1vTltEnacc-nt3tiAnhLSFb7uKQHfCWG-H7PpM_5KeTcpLSQqDEjadqUwy4jRQlSxNDIGqSe6iVY8rfq/pub">View Resume on Google Docs</a>
       <br>
-      <a href="pictures/garrettbachantresume.pdf" class="footer" download>Download Resume as PDF</a>
+      <a href="pictures/Garrett-Bachant-Resume.pdf" class="footer" download>Download Resume as PDF</a>
     </div>
   </body>
 </html>
