--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         <div class="jumbotron" style="margin-top:20px">
           <h1>Garrett Bachant</h1>
           <p id="intro-paragraph">
-            I am a Python programmer passionate about working with and analyzing
-            data. I am particularly interested in applying those skills to improve
-            transit and urban planning. Other interests include linguistics/languages,
-            history, geography, music, sociology, philosophy, psychology, education, and mathematics.
+            I am a programmer and web developer passionate about working with and analyzing
+            data to find solutions for civic and social problems. I am particularly interested in applying those skills to help better understand
+            and improve transit, urban planning, and language.
           </p>
         </div>
       </div>
